More various changes

--- a/docs/views/sandbox.html
+++ b/docs/views/sandbox.html
@@ -41,8 +41,8 @@
                 </div>
             </div>
         </section>
-        <section class="layer bg-darken activate-fade" ng-if="component.foo" ng-animate>
-            <div class="row-bottom theme-white">
+        <section class="layer transparent">
+            <div class="row-bottom theme-white activate-slideUpDown shadow-1" ng-if="component.foo" ng-animate>
                 <h5 class="inline pad">Add to My Drive</h5>
                 <div class="gg-list-item">
                     <div class="text-center"><i class="fa fa-share-alt"></i></div>
@@ -73,7 +73,7 @@
 <div class="gg-device border-light float-left">
     <header class="gg-header theme-primary">test</header>
     <div>
-        <div class="card">
+        <div class="card-6">
             <div style="height: 100px" class="theme-primary">
                 <div class="row-bottom pad">
                     <h4>Top 10 Australian Beaches</h4>
@@ -84,7 +84,7 @@
                 <p>Whitehaven Beach <br>Whitsunday Island, Whitsunday Islands</p>
             </div>
         </div>
-        <div class="card" style="height: 100px">
+        <div class="card-4">
             <div class="col-2 bg-secondary">
                 
             </div>
