--- a/scss/modules/labels/_module.scss
+++ b/scss/modules/labels/_module.scss
@@ -29,6 +29,7 @@ $badge-z-index: 2 !default;
 // Tooltip Settings
 $tooltip-style: default !default;
 $tooltip-theme: default !default;
+$tooltip-animation: 'fade' !default;
 $tooltip-scale: $label-scale !default;
 $tooltip-text-transform: none !default;
 $tooltip-text-decoration: none !default;
