--- a/scss/modules/panels/_module.scss
+++ b/scss/modules/panels/_module.scss
@@ -19,6 +19,7 @@ $alert-style: default !default;
 $alert-theme: default !default;
 $alert-padding: 1rem !default;
 $alert-exit-padding: $alert-padding / 2 !default;
+$alert-exit-symbol: '\00d7' !default;
 $alert-border-width: 1px !default;
 $alert-margin: 0 0 1rem 0 !default;
 $alert-radius: $form-radius !default;
