--- a/scss/modules/nav/_module.scss
+++ b/scss/modules/nav/_module.scss
@@ -33,6 +33,8 @@ $dropdown-z-index: 999 !default;
 $dropdown-radius: $form-radius !default;
 $dropdown-min-width: 10rem !default;
 $dropdown-text-align: left !default;
+$dropdown-clip: true !default;
+$dropdown-margin: 0.25rem !default;
 
 // Tabs Settings
 $tabs-style: default !default;
