--- a/docs/views/panels.html
+++ b/docs/views/panels.html
@@ -6,9 +6,9 @@
     <div class="panel-header">
         <h3>Panel Header</h3>
     </div>
-    <div class="panel-body">
+    <div class="panel-body anchors-hint">
         <strong>panel {{panel_class}}</strong>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, quod, dignissimos, facilis quos enim dolore fuga consequatur dolorem repellendus autem vero rem quibusdam consectetur aliquid saepe consequuntur ipsum nobis recusandae.</p>
+        <p>Lorem ipsum dolor sit amet, <a href="#">consectetur</a> adipisicing elit. Quia, quod, dignissimos, facilis quos enim dolore fuga consequatur dolorem <span class="upper-caps">repellendus</span> autem vero rem quibusdam <a href="#">consectetur</a> aliquid saepe consequuntur ipsum nobis recusandae.</p>
     </div>
     <div class="panel-footer">
         <strong>Panel Footer</strong>
