--- a/scss/modules/forms/_classes.scss
+++ b/scss/modules/forms/_classes.scss
@@ -30,6 +30,11 @@ textarea.inline {
     @extend %input-inline;
 }
 
+input.implicit,
+textarea.implicit {
+    @extend %input-implicit;
+}
+
 textarea { @extend %textarea; }
 
 select { @extend %select; }
