--- a/scss/modules/themes/_classes.scss
+++ b/scss/modules/themes/_classes.scss
@@ -18,10 +18,24 @@
         @extend %color-#{$name};
     }
 
-    .border-#{$name} {
+    .border-#{$name}, .borders-#{$name} > * {
         @extend %border-#{$name};
     }
 }
+
+#{prefixed-class('border')}, #{prefixed-class('borders', $selector: ' > *')} {
+    @extend %border;
+}
+
+.borders-top { @extend %borders-top; }
+.borders-bottom { @extend %borders-bottom; }
+.borders-left { @extend %borders-left; }
+.borders-right { @extend %borders-right; }
+
+.borders-inside-vertical { @extend %borders-inside-vertical; }
+.borders-outside-vertical { @extend %borders-outside-vertical; }
+.borders-inside-horizontal { @extend %borders-inside-horizontal; }
+.borders-outside-horizontal { @extend %borders-outside-horizontal; }
 
 body {
     @include themes();
